...
            "value" : "New Game"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Новая игра"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新游戏"
...
            "value" : "Got it!"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Угадали"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "猜对了"
...
    "gameplay.pause" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Пауза"
...
            "value" : "Rules"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Правила"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "规则"
...
